# RayTracing-Nicolas-Arthur

./: .gitignore  Makefile_  Projet RayTracing Notes.odt  Projet RayTracing.docx  README.md  benchmark.bat  spheres.csv
Achives/Premier test fenêtre/: CMakeLists.txt  Projet Test.sln
Achives/Premier test fenêtre/Debug/: Projet Test.ilk
Achives/Premier test fenêtre/Projet Test/: Projet Test.cpp  Projet Test.vcxproj
Achives/Premier test fenêtre/Projet Test/Debug/: vc142.idb
Achives/Premier test fenêtre/src/: Projet Test.vcxproj  Projet Test.vcxproj.filters
Achives/Premier test fenêtre/src/Debug/: Projet Test.exe.recipe  vc142.idb
Achives/Premier test fenêtre/src/Debug/Projet Test.tlog/: Projet Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projet Test/: Projet Test.sln
Projet Test/Debug/: Projet Test.ilk
Projet Test/Projet Test/: Projet Test.cpp  Projet Test.vcxproj  Projet Test.vcxproj.filters
Projet Test/Projet Test/Debug/: Projet Test.exe.recipe  vc142.idb
Projet Test/Projet Test/Debug/Projet Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projet Test.lastbuildstate  link.read.1.tlog  link.write.1.tlog
parameters/: spheres.csv
results/: image.ppm
src/: csv_reader.cpp  main.cpp  parameters.cpp  parameters.h  ray.cpp  ray.h  shapes.cpp  shapes.h
